...
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Wyj-gl-g3P">
                                <rect key="frame" x="172.5" y="20" width="30" height="30"/>
                                <accessibility key="accessibilityConfiguration" identifier="SelectSet" label="Select Set"/>
                                <state key="normal" title="Title"/>
                                <connections>
...
                                        <rect key="frame" x="0.0" y="0.0" width="114.5" height="36"/>
                                        <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="20"/>
                                        <state key="normal" title="Start"/>
                                        <state key="selected" title="Pause"/>
                                        <connections>
                                            <action selector="toggleAction:" destination="hJF-ix-VLX" eventType="touchUpInside" id="k2N-hN-t8m"/>
...
                                        <rect key="frame" x="114.5" y="0.0" width="114" height="36"/>
                                        <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="20"/>
                                        <state key="normal" title="Lock"/>
                                        <state key="selected" title="Unlock"/>
                                        <connections>
                                            <action selector="toggleLockScreen:" destination="hJF-ix-VLX" eventType="touchUpInside" id="scH-ks-2JJ"/>
...
                                        <rect key="frame" x="228.5" y="0.0" width="114.5" height="36"/>
                                        <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="20"/>
                                        <state key="normal" title="Reset"/>
                                        <attributedString key="userComments">
                                            <fragment content="reset timer button">
...
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="rkV-1q-iX0">
                                <rect key="frame" x="329" y="20" width="30" height="30"/>
                                <state key="normal" title="Edit"/>
                                <attributedString key="userComments">
                                    <fragment content="title of edit current button in timervc">
...
                        </barButtonItem>
                    </toolbarItems>
                    <navigationItem key="navigationItem" title="Select a Set" id="iRb-2M-ebz">
                        <barButtonItem key="leftBarButtonItem" title="Back" id="5u5-An-CAg">
                            <connections>
                                <action selector="backButtonPressed:" destination="Gu1-Lp-WR1" id="BIK-yy-YaT"/>
...
                                                <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" textAlignment="natural" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="5WS-ph-9AV">
                                                    <rect key="frame" x="12" y="4" width="351" height="39.5"/>
                                                    <accessibility key="accessibilityConfiguration" identifier="TitleField" label="Title Field"/>
                                                    <nil key="textColor"/>
                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
...
                                </cells>
                            </tableViewSection>
                            <tableViewSection headerTitle="Intervals" id="c7C-ul-WOT">
                                <cells>
                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" accessoryType="disclosureIndicator" indentationWidth="10" reuseIdentifier="Intervals" textLabel="nvb-Q1-wBf" detailTextLabel="e3f-QW-rtE" style="IBUITableViewCellStyleSubtitle" id="9bl-xq-xJo">
...
