...
            performSegue(withIdentifier: "unwindToTimer",
                         sender: tableView.cellForRow(at: indexPath))
        }
    }

    override func tableView(_ tableView: UITableView, editActionsForRowAt indexPath: IndexPath) -> [UITableViewRowAction]? {
        let deleteText = NSLocalizedString("setlisttvc-act-delete", value: "Delete", comment: "Label of button to delete set")
        let deleteAction = UITableViewRowAction(style: .default, title: deleteText, handler:{action, indexpath in
            log.debug("Delete Action pressed")
            // TODO Refactor to DataManagerService
            let set = self.fetchedResultsController.object(at: indexPath)
            //Delete Set
            self.dataManager.persistentContainer.viewContext.delete(set)
...
