...
        let row = rows[indexPath.row]
        let decorator = IntervalDecorator()
        switch (section, row) {
        case (.duration,.label):
            let cell = tableView.dequeueReusableCell(withIdentifier: "basic", for: indexPath)
            cell.textLabel?.text = decorator.duration(interval: interval)
            cell.accessibilityLabel = "Duration"
            return cell
        case (.duration,.edit):
            guard let cell = tableView.dequeueReusableCell(withIdentifier: "editDuration", for: indexPath)
                as? EditDurationTableViewCell else { return UITableViewCell() }
            cell.accessibilityLabel = "Edit Duration"
            cell.interval = interval
            cell.selectPickerRow(for: interval)
            cell.delegate = self
            return cell
        case (.type,.label):
            let cell = tableView.dequeueReusableCell(withIdentifier: "basic", for: indexPath)
            cell.textLabel?.text = decorator.type(interval: interval)
            cell.accessibilityLabel = "Type"
            return cell
        case (.type,.edit):
            guard let cell = tableView.dequeueReusableCell(withIdentifier: "editType", for: indexPath)
                as? EditTypeTableViewCell else { return UITableViewCell() }
            cell.accessibilityLabel = "Edit Type"
            cell.interval = interval
...
