...
            toggleButton.isEnabled = true
            toggleButton.setTitle(startButtonText, for: UIControlState())
            resetButton.isEnabled = false
            editSetButton.isEnabled = true
        case .paused:
            toggleButton.isEnabled = true
            toggleButton.setTitle(NSLocalizedString("timvervc-btn-continue", value: "Continue", comment: "Label of button to start the timer"), for: UIControlState())
            resetButton.isEnabled = true
            editSetButton.isEnabled = true
        case .started:
            toggleButton.isEnabled = true
            let pauseText = NSLocalizedString("timervc-btn-pause", value: "Pause", comment: "Label of button to start the timer")
            toggleButton.setTitle(pauseText, for: UIControlState())
...
